--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</div>
 	<div id="content">
 		<div class="box">
-			<img src="./images/luca.jpg" width="100" alt="me"><b>L. Rossi</b> BSc, MSc, Phd<br>
+			<img src="./images/luca.jpg" width="100" alt="me"><b>Luca Rossi</b> BSc, MSc, Phd<br>
 			Lecturer (Assistant Professor) in Computer Science<br>
 			<a href="http://eecs.qmul.ac.uk/">School of Electronic Engineering and Computer Science</a><br>
 			<a href="http://www.qmul.ac.uk/">Queen Mary University of London</a>
