--- a/index.html
+++ b/index.html
@@ -224,9 +224,8 @@ L. Rossi, A. Torsello, <a class="paper-title" href="https://blextar.github.io/lu
 		</div>
 	</div>
 	<div id="footer">
-		<a href="http://validator.w3.org/check?uri=referer"><img src="images/xhtml-valid.png" alt="xhtml-valid" /></a>
-		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/css-valid.png" alt="css-valid" /></a>
-    </div>
+		<a href="http://validator.w3.org/check?uri=https%3A%2F%2Fblextar.github.io%2Fluca-rossi%2F"><img src="images/xhtml-valid.png" alt="xhtml-valid" /></a>
+	</div>
 </div>
 </body>
 </html>
