--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li><a href="https://blextar.github.io/luca-rossi/#News" title="News &amp; Events">News &amp; Events</a></li>
 			<li><a href="https://blextar.github.io/luca-rossi/#Journals" title="Journals">Journals</a></li>
 			<li><a href="https://blextar.github.io/luca-rossi/#Conferences" title="Conferences">Conferences</a></li>
+			<li><a href="https://blextar.github.io/luca-rossi/#Grants" title="Grants">Grants</a></li>
 			<li><a href="https://blextar.github.io/luca-rossi/#Software" title="Software">Software</a></li>
 			<li><a href="https://blextar.github.io/luca-rossi/#Teaching" title="Teaching">Teaching</a></li>
 			<li><a href="https://blextar.github.io/luca-rossi/#Others" title="Others">Others</a></li>
@@ -163,6 +164,15 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 			<a href="https://blextar.github.io/luca-rossi/#">Back to Top</a>
 		</div>
 
+		<div class="box" id="Grants">
+			<h1>Grants</h1>
+			<ul>
+				<li class="course">Improving Search Engines Using Machine Learning (KTP), £218,245.</li>
+				<li class="course">Using Data Analytics to Predict Debtor Payment Behaviours (KTP), £122,613.</li>			
+			</ul>
+			<a href="https://blextar.github.io/luca-rossi/#">Back to Top</a>
+		</div>
+
 		<div class="box" id="Software">
 			<h1>Software</h1>
 			<h2>Hierarchical Medial Surfaces Extraction - <a href="https://github.com/blextar/3D-Skeleton">Download code</a> (C++).</h2>
@@ -172,11 +182,11 @@ L. Rossi, A. Torsello, <a class="paper-title" href="https://blextar.github.io/lu
 			<br style="clear:both;" />
 			<a href="https://blextar.github.io/luca-rossi/#">Back to Top</a>
 		</div>
-
+		
 		<div class="box" id="Teaching">
 			<h1>Teaching</h1>
 			<ul>
-				<li class="course">2020-: Software Engineering and Java Programming (QMUL + BUPT Joint Programme, BSc).</li>
+				<li class="course">Current: Software Engineering and Java Programming (QMUL + BUPT Joint Programme, BSc).</li>
 				<li class="course">2019-2020: Deep Learning and C/C++ (SUSTech, BSc).</li>
 				<li class="course">2015-2018: Mathematics for Computing Professionals (Aston, BSc).</li>
 				<li class="course">2015-2018: Software Architecture (Aston, MSc).</li>
