--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="box" id="Grants">
 			<h1>Grants</h1>
 			<ul>
-				<li class="course">Improving Search Engines Using Machine Learning (KTP), £218,245.</li>
-				<li class="course">Using Data Analytics to Predict Debtor Payment Behaviours (KTP), £122,613.</li>			
+				<li class="course">Improving Search Engines Using Machine Learning (KTP), £218,245, 2018-2020.</li>
+				<li class="course">Using Data Analytics to Predict Debtor Payment Behaviours (KTP), £122,613, 2017-2019.</li>
 			</ul>
 			<a href="https://blextar.github.io/luca-rossi/#">Back to Top</a>
 		</div>
