--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
-				<li><em>The Average Mixing Kernel Signature</em> has been accepted at ECCV2020</li>
+				<li>Our paper <em>The Average Mixing Kernel Signature</em> has been accepted at <a href="https://eccv2020.eu/">ECCV 2020</a>.</li>
 				<li>I joined <a href="https://www.qmul.ac.uk/">Queen Mary University of London</a> in February 2020.</li>
 				<li>General chair for <a href="https://www.dais.unive.it/sspr2020/">S+SSPR 2020</a>. <b>Paper submission deadline (UPDATED): 16 October 2020.</b></li>
 			</ul>
