--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="box" id="Conferences">
 			<h1>Conferences</h1>
 			<ul>
-				<li class="paper">L. Cosmo, G. Minello, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="#">The Average Mixing Kernel Signature</a>. 16th European Conference On Computer Vision (<a href="https://eccv2020.eu/">ECCV 2020</a>).</li>
+				<li class="paper">L. Cosmo, G. Minello, M. Bronstein, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="#">The Average Mixing Kernel Signature</a>. 16th European Conference On Computer Vision (<a href="https://eccv2020.eu/">ECCV 2020</a>).</li>
 				
 				<li class="paper">D. Foffano, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://www.frontiersin.org/articles/10.3389/fdata.2019.00007/full">You Can’t See Me: Anonymising Graphs using the Szemeredi Regularity Lemma</a>. International workshop on Modeling and mining Social-Media-driven Complex Networks (<a href="https://www.icwsm.org/2019/">ICWSM 2019</a>).</li>
 				
