--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
+				<li>Our paper <em>k-Anonymity on Graphs using the Szemerédi Regularity Lemma</em> has been accepted for publication on <a href="https://www.computer.org/csdl/journal/tn">TNSE</a>.</li>
 				<li>Our paper <em>Learning Backtrackless Aligned-Spatial Graph Convolutional Networks for Graph Classification</em> has been accepted for publication on <a href="https://www.computer.org/csdl/journal/tp">TPAMI</a>.</li>
 				<li>Our paper <em>The Average Mixing Kernel Signature</em> has been accepted at <a href="https://eccv2020.eu/">ECCV 2020</a>.</li>
 				<li>I joined <a href="https://www.qmul.ac.uk/">Queen Mary University of London</a> in February 2020.</li>
@@ -60,6 +61,8 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="box" id="Journals">
 			<h1>Journals</h1>
 			<ul>
+				<li class="paper">G. Minello, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="#">k-Anonymity on Graphs using the Szemerédi Regularity Lemma</a>, <a href="https://www.computer.org/csdl/journal/tn">IEEE Transactions on Network Science and Engineering</a>, 2020.</li>
+				
 				<li class="paper">L. Bai, L. Cui, Y. Jiao, <b>L. Rossi</b> and E. R. Hancock, <a class="paper-title" href="#">Learning Backtrackless Aligned-Spatial Graph Convolutional Networks for Graph Classifications</a>, <a href="https://www.computer.org/csdl/journal/tp">IEEE Transactions on Pattern Analysis and Machine Intelligence</a>, 2020.</li>
 				
 				<li class="paper">L. Bai, <b>L. Rossi</b>, L. Cui, J. Cheng and E. R. Hancock, <a class="paper-title" href="https://ieeexplore.ieee.org/abstract/document/8759946/">A quantum-inspired similarity measure for the analysis of complete weighted graphs</a>, <a href="http://www.ieeesmc.org/publications/transactions-on-cybernetics">IEEE Transactions on Cybernetics</a>, 2020.</li>
