--- a/index.html
+++ b/index.html
@@ -184,10 +184,7 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 
 		<div class="box" id="Software">
 			<h1>Software</h1>
-			<h2>Hierarchical Medial Surfaces Extraction - <a href="https://github.com/blextar/3D-Skeleton">Download code</a> (C++).</h2>
-			<img src="./images/high_quality_tiger_refined.png" alt="sample skeleton" />
-			<p>This code implements our density-corrected algorithm for the extraction of medial surfaces from 3D shapes. If you use this code, please cite the paper: <br />
-L. Rossi, A. Torsello, <a class="paper-title" href="https://blextar.github.io/luca-rossi/#">Coarse-to-Fine Skeleton Extraction for High Resolution 3D Meshes</a>, <a href="http://www.journals.elsevier.com/computer-vision-and-image-understanding/">Computer Vision and Image Understanding</a>, 118:140-152, 2014</p>
+			<p>Please refer to my <a class="paper-title" href="https://github.com/blextar">Github page</a>.</p>
 			<br style="clear:both;" />
 			<a href="https://blextar.github.io/luca-rossi/#">Back to Top</a>
 		</div>
