--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
-				<li>Our paper <em>k-Anonymity on Graphs using the Szemerédi Regularity Lemma</em> has been accepted for publication on <a href="https://www.comsoc.org/publications/journals/ieee-tnse">TNSE</a>.</li>
-				<li>Our paper <em>Learning Backtrackless Aligned-Spatial Graph Convolutional Networks for Graph Classification</em> has been accepted for publication on <a href="https://www.computer.org/csdl/journal/tp">TPAMI</a>.</li>
-				<li>Our paper <em>The Average Mixing Kernel Signature</em> has been accepted at <a href="https://eccv2020.eu/">ECCV 2020</a>.</li>
-				<li>I joined <a href="https://www.qmul.ac.uk/">Queen Mary University of London</a> in February 2020.</li>
-				<li>General chair for <a href="https://www.dais.unive.it/sspr2020/">S+SSPR 2020</a>. <b>Paper submission deadline (UPDATED): 16 October 2020.</b></li>
+                <li>The LNCS proceedings of S+SSPR 2020 are now available on <a href="https://link.springer.com/book/10.1007%2F978-3-030-73973-7">springer.com</a>.</li>
+				<li>Our paper <em>Estimating the Manifold Dimension of a Complex Network Using Weyl's Law</em> has been accepted for publication at <a href="https://www.dais.unive.it/sspr2020/">S+SSPR 2020</a>.</li>
 			</ul>
 			<a href="https://blextar.github.io/luca-rossi/#">Back to Top</a>
 		</div>
@@ -95,6 +92,7 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="box" id="Conferences">
 			<h1>Conferences</h1>
 			<ul>
+                <li class="paper"><b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://link.springer.com/chapter/10.1007/978-3-030-73973-7_16">Estimating the Manifold Dimension of a Complex Network Using Weyl’s Law</a>. Joint IAPR International Workshops on Structural and Syntactic Pattern Recognition and Statistical Techniques in Pattern Recognition (<a href="https://www.dais.unive.it/sspr2020/">S+SSPR 2020</a>).</li>
 				<li class="paper">L. Cosmo, G. Minello, M. Bronstein, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="#">The Average Mixing Kernel Signature</a>. 16th European Conference On Computer Vision (<a href="https://eccv2020.eu/">ECCV 2020</a>).</li>
 				
 				<li class="paper">D. Foffano, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://www.frontiersin.org/articles/10.3389/fdata.2019.00007/full">You Can’t See Me: Anonymising Graphs using the Szemeredi Regularity Lemma</a>. International workshop on Modeling and mining Social-Media-driven Complex Networks (<a href="https://www.icwsm.org/2019/">ICWSM 2019</a>).</li>
@@ -192,7 +190,8 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="box" id="Teaching">
 			<h1>Teaching</h1>
 			<ul>
-				<li class="course">Current: Software Engineering and Java Programming (QMUL + BUPT Joint Programme, BSc).</li>
+                <li class="course">Current: Software Engineering and Advanced Network Programming (QMUL + BUPT Joint Programme, BSc).</li>
+				<li class="course">2020: Software Engineering and Java Programming (QMUL + BUPT Joint Programme, BSc).</li>
 				<li class="course">2019-2020: Deep Learning and C/C++ (SUSTech, BSc).</li>
 				<li class="course">2015-2018: Mathematics for Computing Professionals (Aston, BSc).</li>
 				<li class="course">2015-2018: Software Architecture (Aston, MSc).</li>
@@ -227,6 +226,10 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 			<h1>Associate Editor For</h1>
 			<ul>
 				<li>Pattern Recognition</li>
+			</ul>
+			<h1>Vice-Chair of</h1>
+			<ul>
+				<li>IAPR TC 2 (Structural and Syntactical Pattern Recognition)</li>
 			</ul>
 			<a href="https://blextar.github.io/luca-rossi/#">Back to Top</a>
 		</div>
