--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
+                <li>Our paper <em>Learning Graph Convolutional Networks based on Quantum Vertex Information Propagation</em> has been accepted for publication on <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=69">IEEE Transactions on Knowledge and Data Engineering</a>.</li>
                 <li>The LNCS proceedings of S+SSPR 2020 are now available on <a href="https://link.springer.com/book/10.1007%2F978-3-030-73973-7">springer.com</a>.</li>
-				<li>Our paper <em>Estimating the Manifold Dimension of a Complex Network Using Weyl's Law</em> has been accepted for publication at <a href="https://www.dais.unive.it/sspr2020/">S+SSPR 2020</a>.</li>
 			</ul>
 			<a href="https://blextar.github.io/luca-rossi/#">Back to Top</a>
 		</div>
 		<div class="box" id="Journals">
 			<h1>Journals</h1>
 			<ul>
+                <li class="paper">L. Bai, Y. Jiao, L. Cui, <b>L. Rossi</b>, Y. Wang, P. S. Yu and E. R. Hancock, <a class="paper-title" href="#">Learning Graph Convolutional Networks based on Quantum Vertex Information Propagation</a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=69">IEEE Transactions on Knowledge and Data Engineering</a>, 2021.</li>
+
 				<li class="paper">G. Minello, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="#">k-Anonymity on Graphs using the Szemerédi Regularity Lemma</a>, <a href="https://www.comsoc.org/publications/journals/ieee-tnse">IEEE Transactions on Network Science and Engineering</a>, 2020.</li>
 				
 				<li class="paper">L. Bai, L. Cui, Y. Jiao, <b>L. Rossi</b> and E. R. Hancock, <a class="paper-title" href="#">Learning Backtrackless Aligned-Spatial Graph Convolutional Networks for Graph Classifications</a>, <a href="https://www.computer.org/csdl/journal/tp">IEEE Transactions on Pattern Analysis and Machine Intelligence</a>, 2020.</li>
@@ -229,7 +231,7 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 			</ul>
 			<h1>Vice-Chair of</h1>
 			<ul>
-				<li>IAPR TC 2 (Structural and Syntactical Pattern Recognition)</li>
+				<li>IAPR <a href="https://iapr.org/committees/structural-and-syntactical-pattern-recognition">TC 2</a> (Structural and Syntactical Pattern Recognition)</li>
 			</ul>
 			<a href="https://blextar.github.io/luca-rossi/#">Back to Top</a>
 		</div>
