--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="misc" id="Jobs">
 			<h1 class="hot">Postdoctoral and PhD Opportunities at QMUL</h1>
 			I'm looking for highly motivated PhD students, Research Assistants and Postdoctoral Researchers to work under my supervision in London. Please <a href="mailto:luca_rossi_at_qmul_ac_uk">get in touch</a> for more details.
+            <br />
+            You can also consider the following opportunities to be financially supported to undertake your research under my supervision at QMUL:
+            <ul>
+            <li><a href="https://grants.futureoflife.org/prog/phd_fellowship/">Vitalik Buterin PhD Fellowship in AI Existential Safety</a> (deadline 29/10/21)</li>
+            <li><a href="https://grants.futureoflife.org/prog/postdoctoral/">Vitalik Buterin Postdoctoral Fellowship in AI Existential Safety</a> (deadline 05/11/21)</li>
+            <li><a href="https://royalsociety.org/grants-schemes-awards/grants/newton-international/">Newton International Fellowship</a> (2021 deadline passed)</li>
+            <li><a href="https://iggi.org.uk/apply">IGGI PhD Studentship</a> (opening soon)</li>
+            </ul>
 		</div>
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
