--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
             <br />
             You can also consider the following opportunities to be financially supported to undertake your research under my supervision at QMUL:
             <ul>
-            <li><a href="https://royalsociety.org/grants-schemes-awards/grants/newton-international/">Newton International Fellowship</a> (2021 deadline passed)</li>
+            <li><a href="https://royalsociety.org/grants-schemes-awards/grants/newton-international/">Newton International Fellowship</a></li>
             <li><a href="https://iggi.org.uk/apply">IGGI PhD Studentship</a></li>
             </ul>
 		</div>
