--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
                 <li>Our paper <em>3D Shape Analysis through a Quantum Lens: the Average Mixing Kernel Signature</em> has been accepted for publication on the <a href="https://www.springer.com/journal/11263/">International Journal of Computer Vision</a>.</li>
+                <li>The new website of the <a href="https://iapr.org/tc2">IAPR TC2</a> is now online.</li>
                 <li>Our paper <em>Learning Graph Convolutional Networks based on Quantum Vertex Information Propagation</em> has been accepted for publication on <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=69">IEEE Transactions on Knowledge and Data Engineering</a>.</li>
 			</ul>
 			<a href="https://blextar.github.io/luca-rossi/#">Back to Top</a>
