--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ University of Birmingham (UK), in the "Networked Systems and Data Science Lab" l
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
-                <li>Our paper <em>3D Shape Analysis through a Quantum Lens: the Average Mixing Kernel Signature</em> has been accepted for publication on the <a href="https://www.springer.com/journal/11263/">International Journal of Computer Vision</a>.</li>
+                <li>Our paper <em>3D Shape Analysis through a Quantum Lens: the Average Mixing Kernel Signature</em> has been accepted for publication on the <a href="https://www.springer.com/journal/11263/">International Journal of Computer Vision</a> and is available for free <a href="https://rdcu.be/cK8Qp">here</a>.</li>
+                <li>I won the PGR Supervisor of the Year award in the <a href="https://www.qmsu.org/awards/education/criteria/">Education Awards 2022</a> of Queen Mary University of London.</li>
                 <li>The new website of the <a href="https://iapr.org/tc2">IAPR TC2</a> is now online.</li>
                 <li>Our paper <em>Learning Graph Convolutional Networks based on Quantum Vertex Information Propagation</em> has been accepted for publication on <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=69">IEEE Transactions on Knowledge and Data Engineering</a>.</li>
 			</ul>
