--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div id="header">
 		<ul id="menu">
 			<li><a href="#Bio" title="Bio">Short Bio</a></li>
-			<li><a href="#Jobs" title="Job Opportunities">Job Opportunities</a></li>
+			<li><a href="#Jobs" title="Job Opportunities" class="highlighted">Job Opportunities</a></li>
 			<li><a href="#News" title="News &amp; Events">News &amp; Events</a></li>
 			<li><a href="#Journals" title="Journals">Journals</a></li>
 			<li><a href="#Conferences" title="Conferences">Conferences</a></li>
