--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ I am a full-time <a href="https://www.polyu.edu.hk/eie/people/academic-staff/dr-
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
+				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph Neural Networks in Vision-Language Image Understanding: A Survey.</as></li>
                 <li>I have joined <a href="https://www.polyu.edu.hk">PolyU</a> as an Assistant Professor in November 2022.</li>
-                <li>2 papers accepted at <a href="https://sspr2022.encs.concordia.ca/">S+SSPR 2022</a>.</li>
 			</ul>
 			<a href="#">Back to Top</a>
 		</div>
@@ -170,6 +170,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eie/people/academic-staff/dr-
 			</ul>
 			<h1>Preprints</h1>
 			<ul>
+				<li class="paper">H. Senior, G. Slabaugh, S. Yuan and <b>L. Rossi</b>, <a class="paper-title" href="https://arxiv.org/pdf/2303.03761.pdf">Graph Neural Networks in Vision-Language Image Understanding: A Survey</a>, arXiv:2303.03761, 2023.</li>
 				<li class="paper">L. Cosmo, G. Minello, M. Bronstein, E. Rodolà, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://arxiv.org/pdf/2112.07436.pdf">Graph Kernel Neural Networks</a>, arXiv:2112.07436, 2021.</li>
 				<li class="paper">A. Torsello and <b>L. Rossi</b>, <a class="paper-title" href="http://arxiv.org/pdf/1601.04691v1.pdf">Efficient Computation of Decoherent Quantum Walks through Eigenvalue Perturbation</a>, arXiv:1601.04691, 2016.</li>
 
@@ -191,7 +192,8 @@ I am a full-time <a href="https://www.polyu.edu.hk/eie/people/academic-staff/dr-
 			<h1>Students</h1>
 			<ul>
 				<li class="course"><a href="https://henrysenior.com/">Henry Senior</a> (PhD candidate, QMUL).</li>
-				<li class="course"><a href="https://github.com/RicardoL1u">Yantao Liu</a> (BSc, QMUL/BUPT).</li>
+				<li class="course"><a href="#">Lingfeng Zhang</a> (MSc student and part-time RA, PolyU).</li>
+				<li class="course"><a href="https://github.com/RicardoL1u">Yantao Liu</a> (BSc student, QMUL/BUPT).</li>
 			</ul>
 			<a href="#">Back to Top</a>
 		</div>
