--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
 				<li><a href="#">Multi-Stain Self-Attention Graph Multiple Instance Learning Pipeline for Histopathology Whole Slide Images</a> has been accepted to <a href="https://bmvc2023.org/">BMVC 2023</a>.</li>
-				<li><a class="paper-title" href="#">Can I write this is ableist AF in a peer review?: A corpus-driven analysis of Twitter engagement strategies across disciplinary groups</a> has been accepted for publication on the journal <a href="https://revistaiberica.org/index.php/iberica">Ibérica</a></li>
+				<li><a class="paper-title" href="#">Can I write this is ableist AF in a peer review?: A corpus-driven analysis of Twitter engagement strategies across disciplinary groups</a> has been accepted for publication on the journal <a href="https://revistaiberica.org/index.php/iberica">Ibérica</a>.</li>
 				<li>The <a href="https://sites.google.com/view/iapr-tc2/">TC2</a> is holding a one-day PhD Summer School on Deep Learning on Graph at PolyU on the 31st of August 2023. For more details vist the <a href="https://sites.google.com/view/tc2-dlg">event website</a>.</li>
 				<li><a href="#">C2N-ABDP: Cluster-to-Node Attention-based Differentiable Pooling</a> has been accepted to <a href="https://gbr2023.unisa.it/">GbR 2023</a>.</li>
 				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph Neural Networks in Vision-Language Image Understanding: A Survey.</a></li>
