--- a/index.html
+++ b/index.html
@@ -49,16 +49,18 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
+				<li>Check out our new preprint <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>.</li>
+				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a> has been accepted for publication on the journal <a href="https://link.springer.com/journal/371">The Visual Computer</a>.</li>
 				<li><a href="https://www.sciencedirect.com/science/article/abs/pii/S003132032300907X">GNN-LoFI: A novel graph neural network through localized feature-based histogram intersection</a> has been accepted for publication on the journal <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>.</li>
 				<li><a href="https://bmvc2022.mpi-inf.mpg.de/BMVC2023/0789.pdf">Multi-Stain Self-Attention Graph Multiple Instance Learning Pipeline for Histopathology Whole Slide Images</a> has been accepted to <a href="https://bmvc2023.org/">BMVC 2023</a>.</li>
 				<li><a class="paper-title" href="https://revistaiberica.org/index.php/iberica/article/view/775">Can I write this is ableist AF in a peer review?: A corpus-driven analysis of Twitter engagement strategies across disciplinary groups</a> has been accepted for publication on the journal <a href="https://revistaiberica.org/index.php/iberica">Ibérica</a>.</li>
-				<li>The <a href="https://sites.google.com/view/iapr-tc2/">TC2</a> is holding a one-day PhD Summer School on Deep Learning on Graph at PolyU on the 31st of August 2023. For more details vist the <a href="https://sites.google.com/view/tc2-dlg">event website</a>.</li>
 			</ul>
 			<a href="#">Back to Top</a>
 		</div>
 		<div class="box" id="Journals">
 			<h1>Journals</h1>
 			<ul>
+				<li class="paper">H. Senior, G. Slabaugh, S. Yuan and <b>L. Rossi</b>, <a class="paper-title" href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a>, <a href="https://link.springer.com/journal/371">The Visual Computer</a>, 2024.</li>
 				<li class="paper">A. Bicciato, L. Cosmo, G. Minello, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://www.sciencedirect.com/science/article/abs/pii/S003132032300907X">GNN-LoFI: A novel graph neural network through localized feature-based histogram intersection</a>, <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>, 2024.</li>
 				<li class ="paper">X. Xu, J. Gevers and <b>L. Rossi</b>, <a class="paper-title" href="#">Can I write this is ableist AF in a peer review?: A corpus-driven analysis of Twitter engagement strategies across disciplinary groups</a>, <a href="https://revistaiberica.org/index.php/iberica">Ibérica</a>, 2023.</li>
                 <li class="paper">L. Cosmo, G. Minello, M. Bronstein, Emanuele Rodolà, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="#">3D Shape Analysis through a Quantum Lens: the Average Mixing Kernel Signature</a>, <a href="https://www.springer.com/journal/11263/">International Journal of Computer Vision</a>, 2022.</li>
@@ -179,7 +181,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 			</ul>
 			<h1>Preprints</h1>
 			<ul>
-				<li class="paper">H. Senior, G. Slabaugh, S. Yuan and <b>L. Rossi</b>, <a class="paper-title" href="https://arxiv.org/pdf/2303.03761.pdf">Graph Neural Networks in Vision-Language Image Understanding: A Survey</a>, arXiv:2303.03761, 2023.</li>
+				<li class="paper">G. Minello, A. Bicciato, <b>L. Rossi</b>, A. Torsello and L. Cosmo, <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>, arXiv:2402.18974, 2024.</li>
 				<li class="paper">L. Cosmo, G. Minello, M. Bronstein, E. Rodolà, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://arxiv.org/pdf/2112.07436.pdf">Graph Kernel Neural Networks</a>, arXiv:2112.07436, 2021.</li>
 				<li class="paper">A. Torsello and <b>L. Rossi</b>, <a class="paper-title" href="http://arxiv.org/pdf/1601.04691v1.pdf">Efficient Computation of Decoherent Quantum Walks through Eigenvalue Perturbation</a>, arXiv:1601.04691, 2016.</li>
 
