--- a/index.html
+++ b/index.html
@@ -48,18 +48,20 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		</div>
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
-			<ul>
+			<ul><li><a href="https://arxiv.org/pdf/2112.07436.pdf">Graph Kernel Neural Networks</a> has been accepted for publication on the joiurnal <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE Transactions on Neural Networks and Learning Systems</a>.</li>
+				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a> has been accepted for publication on the journal <a href="https://link.springer.com/journal/371">The Visual Computer</a>.</li>
 				<li>Check out our new preprint <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>.</li>
 				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a> has been accepted for publication on the journal <a href="https://link.springer.com/journal/371">The Visual Computer</a>.</li>
 				<li><a href="https://www.sciencedirect.com/science/article/abs/pii/S003132032300907X">GNN-LoFI: A novel graph neural network through localized feature-based histogram intersection</a> has been accepted for publication on the journal <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>.</li>
 				<li><a href="https://bmvc2022.mpi-inf.mpg.de/BMVC2023/0789.pdf">Multi-Stain Self-Attention Graph Multiple Instance Learning Pipeline for Histopathology Whole Slide Images</a> has been accepted to <a href="https://bmvc2023.org/">BMVC 2023</a>.</li>
-				<li><a class="paper-title" href="https://revistaiberica.org/index.php/iberica/article/view/775">Can I write this is ableist AF in a peer review?: A corpus-driven analysis of Twitter engagement strategies across disciplinary groups</a> has been accepted for publication on the journal <a href="https://revistaiberica.org/index.php/iberica">Ibérica</a>.</li>
 			</ul>
 			<a href="#">Back to Top</a>
 		</div>
 		<div class="box" id="Journals">
 			<h1>Journals</h1>
 			<ul>
+				<li class="paper">L. Cosmo, G. Minello, M. Bronstein, E. Rodolà, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://arxiv.org/pdf/2112.07436.pdf">Graph Kernel Neural Networks</a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE Transactions on Neural Networks and Learning Systems</a>, 2024.</li>
+				<li class="paper">A. Torsello and <b>L. Rossi</b>, <a class="paper-title" href="http://arxiv.org/pdf/1601.04691v1.pdf">Efficient Computation of Decoherent Quantum Walks through Eigenvalue Perturbation</a>, arXiv:1601.04691, 2016.</li>
 				<li class="paper">H. Senior, G. Slabaugh, S. Yuan and <b>L. Rossi</b>, <a class="paper-title" href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a>, <a href="https://link.springer.com/journal/371">The Visual Computer</a>, 2024.</li>
 				<li class="paper">A. Bicciato, L. Cosmo, G. Minello, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://www.sciencedirect.com/science/article/abs/pii/S003132032300907X">GNN-LoFI: A novel graph neural network through localized feature-based histogram intersection</a>, <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>, 2024.</li>
 				<li class ="paper">X. Xu, J. Gevers and <b>L. Rossi</b>, <a class="paper-title" href="#">Can I write this is ableist AF in a peer review?: A corpus-driven analysis of Twitter engagement strategies across disciplinary groups</a>, <a href="https://revistaiberica.org/index.php/iberica">Ibérica</a>, 2023.</li>
@@ -182,9 +184,6 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 			<h1>Preprints</h1>
 			<ul>
 				<li class="paper">G. Minello, A. Bicciato, <b>L. Rossi</b>, A. Torsello and L. Cosmo, <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>, arXiv:2402.18974, 2024.</li>
-				<li class="paper">L. Cosmo, G. Minello, M. Bronstein, E. Rodolà, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://arxiv.org/pdf/2112.07436.pdf">Graph Kernel Neural Networks</a>, arXiv:2112.07436, 2021.</li>
-				<li class="paper">A. Torsello and <b>L. Rossi</b>, <a class="paper-title" href="http://arxiv.org/pdf/1601.04691v1.pdf">Efficient Computation of Decoherent Quantum Walks through Eigenvalue Perturbation</a>, arXiv:1601.04691, 2016.</li>
-
 				<li class="paper">A. Lima, V. Pejovic, <b>L. Rossi</b>, M. Musolesi and M. Gonzalez, <a class="paper-title" href="http://arxiv.org/pdf/1504.01316.pdf">Progmosis: Evaluating Risky Individual Behavior During Epidemics Using Mobile Network Data</a>, Submission to D4D Senegal (<a href="http://www.netmob.org/">NetMob 2015</a>).</li>
 			</ul>
 			<a href="#">Back to Top</a>
@@ -202,8 +201,9 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		<div class="box" id="Students">
 			<h1>Students</h1>
 			<ul>
+				<li class="course">Chenyu Liu</a> (PhD candidate, PolyU).</li>
+				<li class="course"><a href="#">Lingfeng Zhang</a> (Part-time RA, PolyU).</li>
 				<li class="course"><a href="https://henrysenior.com/">Henry Senior</a> (PhD candidate, QMUL).</li>
-				<li class="course"><a href="#">Lingfeng Zhang</a> (MSc student and part-time RA, PolyU).</li>
 				<li class="course"><a href="https://github.com/RicardoL1u">Yantao Liu</a> (BSc student, QMUL/BUPT).</li>
 			</ul>
 			<a href="#">Back to Top</a>
