--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 			<ul><li><a href="https://arxiv.org/pdf/2112.07436.pdf">Graph Kernel Neural Networks</a> has been accepted for publication on the joiurnal <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE Transactions on Neural Networks and Learning Systems</a>.</li>
 				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a> has been accepted for publication on the journal <a href="https://link.springer.com/journal/371">The Visual Computer</a>.</li>
 				<li>Check out our new preprint <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>.</li>
-				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a> has been accepted for publication on the journal <a href="https://link.springer.com/journal/371">The Visual Computer</a>.</li>
 				<li><a href="https://www.sciencedirect.com/science/article/abs/pii/S003132032300907X">GNN-LoFI: A novel graph neural network through localized feature-based histogram intersection</a> has been accepted for publication on the journal <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>.</li>
 				<li><a href="https://bmvc2022.mpi-inf.mpg.de/BMVC2023/0789.pdf">Multi-Stain Self-Attention Graph Multiple Instance Learning Pipeline for Histopathology Whole Slide Images</a> has been accepted to <a href="https://bmvc2023.org/">BMVC 2023</a>.</li>
 			</ul>
@@ -217,6 +216,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		<div class="box" id="Teaching">
 			<h1>Teaching</h1>
 			<ul>
+				<li class="course">2023-2024: Deep Learning and Foundations of AI (PolyU, BSc).</li>
                 <li class="course">2020-2022: Software Engineering and Advanced Network Programming (QMUL + BUPT Joint Programme, BSc).</li>
 				<li class="course">2020: Software Engineering and Java Programming (QMUL + BUPT Joint Programme, BSc).</li>
 				<li class="course">2019-2020: Deep Learning and C/C++ (SUSTech, BSc).</li>
