--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		</div>
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
-			<ul><li><a href="https://arxiv.org/pdf/2112.07436.pdf">Graph Kernel Neural Networks</a> has been accepted for publication on the joiurnal <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE Transactions on Neural Networks and Learning Systems</a>.</li>
+			<ul><li>Submit your paper to <a href="https://sites.google.com/view/s-sspr-2024">S+SSPR 2024</a>, which will be held in Venice (Italy) 9-11 September 2024.</li>
+				<li><a href="https://arxiv.org/pdf/2112.07436.pdf">Graph Kernel Neural Networks</a> has been accepted for publication on the joiurnal <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE Transactions on Neural Networks and Learning Systems</a>.</li>
 				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a> has been accepted for publication on the journal <a href="https://link.springer.com/journal/371">The Visual Computer</a>.</li>
 				<li>Check out our new preprint <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>.</li>
 				<li><a href="https://www.sciencedirect.com/science/article/abs/pii/S003132032300907X">GNN-LoFI: A novel graph neural network through localized feature-based histogram intersection</a> has been accepted for publication on the journal <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>.</li>
