--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 			<h1>Journals</h1>
 			<ul>
 				<li class="paper">L. Cosmo, G. Minello, M. Bronstein, E. Rodolà, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://arxiv.org/pdf/2112.07436.pdf">Graph Kernel Neural Networks</a>, <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE Transactions on Neural Networks and Learning Systems</a>, 2024.</li>
-				<li class="paper">A. Torsello and <b>L. Rossi</b>, <a class="paper-title" href="http://arxiv.org/pdf/1601.04691v1.pdf">Efficient Computation of Decoherent Quantum Walks through Eigenvalue Perturbation</a>, arXiv:1601.04691, 2016.</li>
 				<li class="paper">H. Senior, G. Slabaugh, S. Yuan and <b>L. Rossi</b>, <a class="paper-title" href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a>, <a href="https://link.springer.com/journal/371">The Visual Computer</a>, 2024.</li>
 				<li class="paper">A. Bicciato, L. Cosmo, G. Minello, <b>L. Rossi</b> and A. Torsello, <a class="paper-title" href="https://www.sciencedirect.com/science/article/abs/pii/S003132032300907X">GNN-LoFI: A novel graph neural network through localized feature-based histogram intersection</a>, <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>, 2024.</li>
 				<li class ="paper">X. Xu, J. Gevers and <b>L. Rossi</b>, <a class="paper-title" href="#">Can I write this is ableist AF in a peer review?: A corpus-driven analysis of Twitter engagement strategies across disciplinary groups</a>, <a href="https://revistaiberica.org/index.php/iberica">Ibérica</a>, 2023.</li>
@@ -184,6 +183,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 			<h1>Preprints</h1>
 			<ul>
 				<li class="paper">G. Minello, A. Bicciato, <b>L. Rossi</b>, A. Torsello and L. Cosmo, <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>, arXiv:2402.18974, 2024.</li>
+				<li class="paper">A. Torsello and <b<L. Rossi</b>, <a href="https://arxiv.org/abs/1601.04691">Efficient Computation of Decoherent Quantum Walks through Eigenvalue Perturbation</>, arXiv:1601.04691, 2016.</li>
 				<li class="paper">A. Lima, V. Pejovic, <b>L. Rossi</b>, M. Musolesi and M. Gonzalez, <a class="paper-title" href="http://arxiv.org/pdf/1504.01316.pdf">Progmosis: Evaluating Risky Individual Behavior During Epidemics Using Mobile Network Data</a>, Submission to D4D Senegal (<a href="http://www.netmob.org/">NetMob 2015</a>).</li>
 			</ul>
 			<a href="#">Back to Top</a>
