--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 			<h1>Preprints</h1>
 			<ul>
 				<li class="paper">G. Minello, A. Bicciato, <b>L. Rossi</b>, A. Torsello and L. Cosmo, <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>, arXiv:2402.18974, 2024.</li>
-				<li class="paper">A. Torsello and <b<L. Rossi</b>, <a href="https://arxiv.org/abs/1601.04691">Efficient Computation of Decoherent Quantum Walks through Eigenvalue Perturbation</>, arXiv:1601.04691, 2016.</li>
+				<li class="paper">A. Torsello and <b<L. Rossi</b>, <a href="https://arxiv.org/abs/1601.04691">Efficient Computation of Decoherent Quantum Walks through Eigenvalue Perturbation</a>, arXiv:1601.04691, 2016.</li>
 				<li class="paper">A. Lima, V. Pejovic, <b>L. Rossi</b>, M. Musolesi and M. Gonzalez, <a class="paper-title" href="http://arxiv.org/pdf/1504.01316.pdf">Progmosis: Evaluating Risky Individual Behavior During Epidemics Using Mobile Network Data</a>, Submission to D4D Senegal (<a href="http://www.netmob.org/">NetMob 2015</a>).</li>
 			</ul>
 			<a href="#">Back to Top</a>
