--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		</div>
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
-			<ul><li>Submit your paper to <a href="https://sites.google.com/view/s-sspr-2024">S+SSPR 2024</a>, which will be held in Venice (Italy) 9-11 September 2024.</li>
+			<ul>
+				<li><a href="#">GraFix: A Graph Transformer with Fixed Attention based on the WL Kernel</a> has been accepted to <a href="https://icpr2024.org/">ICPR 2024</a>.</li>
+				<li>Submit your paper to <a href="https://sites.google.com/view/s-sspr-2024">S+SSPR 2024</a>, which will be held in Venice (Italy) 9-11 September 2024.</li>
 				<li><a href="https://ieeexplore.ieee.org/document/10542111">Graph Kernel Neural Networks</a> has been accepted for publication on the joiurnal <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE Transactions on Neural Networks and Learning Systems</a>.</li>
 				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a> has been accepted for publication on the journal <a href="https://link.springer.com/journal/371">The Visual Computer</a>.</li>
 				<li>Check out our new preprint <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>.</li>
@@ -102,6 +104,8 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		<div class="box" id="Conferences">
 			<h1>Conferences</h1>
 			<ul>
+				<li class="paper">L. Zhang, L. Cosmo, G. Minello, A. Torsello, and <b>L. Rossi</b>, <a class="paper-title" href="#">GraFix: A Graph Transformer with Fixed Attention based on the WL Kernel</a>, <a href="https://icpr2024.org/">ICPR</a>, 2024.</li>
+				
 				<li class="paper">A. Gallagher-Syed, <b>L. Rossi</b>, F. Rivellese, C. Pitzalis, M. Lewis, M. Barnes, and G. Slabaugh, <a class="paper-title" href="#">Multi-Stain Self-Attention Graph Multiple Instance Learning Pipeline for Histopathology Whole Slide Images</a>, <a href="https://bmvc2023.org/">BMVC</a>, 2023.</li>
 				
 				<li class="paper">R. Ye, L. Cui, <b>L. Rossi</b>, Y. Wang, Z. Xu, L. Bai and E. R. Hancock, <a class="paper-title" href="#">C2N-ABDP: Cluster-to-Node Attention-based Differentiable Pooling</a>, <a href="https://gbr2023.unisa.it/">GbR</a>, 2023.</li>
