--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		</div>
 		<div class="misc" id="Jobs">
 			<h1 class="hot">Research assistant, PhD, and postdoctoral opportunities at PolyU</h1><br />
-			If you have strong programming skills, a solid mathematical background, and you are interested in pursuing a PhD degree under my supervision at PolyU, please <a href="mailto:luca_rossi_at_polyu_edu_hk">get in touch</a> for more details on the available positions and funding opportunities. Students interested in PolyU's Joint <a href="https://www.polyu.edu.hk/en/gs/prospective-students/joint-phd-programmes-leading-to-dual-awards/">PhD Programmes Leading to Dual Awards</a> visiting researchers, and research assistant are also welcome to <a href="mailto:luca_rossi_at_polyu_edu_hk">contact me</a>.
+			I'm currently looking for exceptional students interested in applying for the <b>Hong Kong PhD Fellowship Scheme</b> under my supervision. The deadline for applications is the 1st of December 2024, <a href="mailto:luca_rossi_at_polyu_edu_hk">get in touch</a> asap so that I can help you to shape a strong research proposal for your application. More info can be found here: <a href="https://www.polyu.edu.hk/gs/prospective-students/hkpfs/">HKPFS@PolyU</a>. Students interested in PolyU's <a href="https://www.polyu.edu.hk/en/gs/prospective-students/dual-phd-degree-programmes/">Dual PhD Programmes</a>, visiting researchers, and research assistant are also welcome to <a href="mailto:luca_rossi_at_polyu_edu_hk">contact me</a>.
 		</div>
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
