--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<img src="./images/luca.jpg" width="130" alt="me" /><b>Luca Rossi</b> BSc, MSc, Phd, FHEA<br />
 			Assistant Professor in Machine Learning<br />
 			<a href="https://www.polyu.edu.hk/eee/">Department of Electrical and Electronic Engineering</a><br />
+			<a href="https://www.polyu.edu.hk/dsai/">Department of Data Science and Artificial Intelligence</a><br />
 			<a href="https://www.polyu.edu.hk/feng/">Faculty of Engineering</a><br />
 			<a href="https://www.polyu.edu.hk">Hong Kong Polytechnic University</a><br />
 			<a href="https://scholar.google.com/citations?user=NykUU_YAAAAJ&hl=en">[Google Scholar Profile]</a>
@@ -44,18 +45,15 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		</div>
 		<div class="misc" id="Jobs">
 			<h1 class="hot">Research assistant, PhD, and postdoctoral opportunities at PolyU</h1><br />
-			I'm currently looking for exceptional students interested in applying for the <b>Hong Kong PhD Fellowship Scheme</b> under my supervision. The deadline for applications is the 1st of December 2024, <a href="mailto:luca_rossi_at_polyu_edu_hk">get in touch</a> asap so that I can help you to shape a strong research proposal for your application. More info can be found here: <a href="https://www.polyu.edu.hk/gs/prospective-students/hkpfs/">HKPFS@PolyU</a>. Students interested in PolyU's <a href="https://www.polyu.edu.hk/en/gs/prospective-students/dual-phd-degree-programmes/">Dual PhD Programmes</a>, visiting researchers, and research assistant are also welcome to <a href="mailto:luca_rossi_at_polyu_edu_hk">contact me</a>.
+			I'm currently looking for exceptional students interested in applying for the <b>Hong Kong PhD Fellowship Scheme</b> under my supervision. The deadline for applications is the 1st of December 2024, <a href="mailto:luca_rossi_at_polyu_edu_hk">get in touch</a> asap so that I can help you to shape a strong research proposal for your application. More info can be found at <a href="https://www.polyu.edu.hk/gs/prospective-students/hkpfs/">HKPFS@PolyU</a>. Students interested in PolyU's <a href="https://www.polyu.edu.hk/en/gs/prospective-students/dual-phd-degree-programmes/">Dual PhD Programmes</a>, visiting researchers, and research assistant are also welcome to <a href="mailto:luca_rossi_at_polyu_edu_hk">contact me</a>.
 		</div>
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
 			<ul>
+				<li>I will be chairing <a href="https://sites.google.com/view/s-sspr-2024">S+SSPR 2024</a> in Venice (Italy) on 9-10 September 2024.</li>
 				<li><a href="#">GraFix: A Graph Transformer with Fixed Attention based on the WL Kernel</a> has been accepted to <a href="https://icpr2024.org/">ICPR 2024</a>.</li>
-				<li>Submit your paper to <a href="https://sites.google.com/view/s-sspr-2024">S+SSPR 2024</a>, which will be held in Venice (Italy) 9-11 September 2024.</li>
 				<li><a href="https://ieeexplore.ieee.org/document/10542111">Graph Kernel Neural Networks</a> has been accepted for publication on the joiurnal <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385">IEEE Transactions on Neural Networks and Learning Systems</a>.</li>
 				<li><a href="https://arxiv.org/pdf/2303.03761.pdf">Graph neural networks in vision-language image understanding: a survey</a> has been accepted for publication on the journal <a href="https://link.springer.com/journal/371">The Visual Computer</a>.</li>
-				<li>Check out our new preprint <a href="https://arxiv.org/html/2402.18974v1">Graph Generation via Spectral Diffusion</a>.</li>
-				<li><a href="https://www.sciencedirect.com/science/article/abs/pii/S003132032300907X">GNN-LoFI: A novel graph neural network through localized feature-based histogram intersection</a> has been accepted for publication on the journal <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>.</li>
-				<li><a href="https://bmvc2022.mpi-inf.mpg.de/BMVC2023/0789.pdf">Multi-Stain Self-Attention Graph Multiple Instance Learning Pipeline for Histopathology Whole Slide Images</a> has been accepted to <a href="https://bmvc2023.org/">BMVC 2023</a>.</li>
 			</ul>
 			<a href="#">Back to Top</a>
 		</div>
@@ -104,6 +102,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		<div class="box" id="Conferences">
 			<h1>Conferences</h1>
 			<ul>
+				<li class="paper">G. Minello, L. Zhang, A. Bicciato, <b>L. Rossi</b>, Andrea Torsello, and Luca Cosmo, <a class="paper-title" href="#">LESI-GNN: an Interpretable Graph Neural Network based on Local Structures Embedding</a>, <a href="https://sspr2024.dais.unive.it/">S+SSPR</a>, 2024.</li>	
 				<li class="paper">L. Zhang, L. Cosmo, G. Minello, A. Torsello, and <b>L. Rossi</b>, <a class="paper-title" href="#">GraFix: A Graph Transformer with Fixed Attention based on the WL Kernel</a>, <a href="https://icpr2024.org/">ICPR</a>, 2024.</li>
 				
 				<li class="paper">A. Gallagher-Syed, <b>L. Rossi</b>, F. Rivellese, C. Pitzalis, M. Lewis, M. Barnes, and G. Slabaugh, <a class="paper-title" href="#">Multi-Stain Self-Attention Graph Multiple Instance Learning Pipeline for Histopathology Whole Slide Images</a>, <a href="https://bmvc2023.org/">BMVC</a>, 2023.</li>
