--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		</div>
 		<div class="misc" id="Jobs">
 			<h1 class="hot">Research assistant, PhD, and postdoctoral opportunities at PolyU</h1><br />
-			I'm currently looking for exceptional students interested in applying for the <b>Hong Kong PhD Fellowship Scheme</b> under my supervision. The deadline for applications is the 1st of December 2024, <a href="mailto:luca_rossi_at_polyu_edu_hk">get in touch</a> asap so that I can help you to shape a strong research proposal for your application. More info can be found at <a href="https://www.polyu.edu.hk/gs/prospective-students/hkpfs/">HKPFS@PolyU</a>. Students interested in PolyU's <a href="https://www.polyu.edu.hk/en/gs/prospective-students/dual-phd-degree-programmes/">Dual PhD Programmes</a>, visiting researchers, and research assistant are also welcome to <a href="mailto:luca_rossi_at_polyu_edu_hk">contact me</a>.
+			<p class="highlighted">I'm currently looking for exceptional students interested in applying for the <b>Hong Kong PhD Fellowship Scheme</b> under my supervision. The deadline for applications is the 1st of December 2024, <a href="mailto:luca_rossi_at_polyu_edu_hk">get in touch</a> asap so that I can help you to shape a strong research proposal for your application. More info can be found at <a href="https://www.polyu.edu.hk/gs/prospective-students/hkpfs/">HKPFS@PolyU</a>. Students interested in PolyU's <a href="https://www.polyu.edu.hk/en/gs/prospective-students/dual-phd-degree-programmes/">Dual PhD Programmes</a>, visiting researchers, and research assistant are also welcome to <a href="mailto:luca_rossi_at_polyu_edu_hk">contact me</a>.</p>
 		</div>
 		<div class="misc" id="News">
 			<h1>News &amp; Upcoming Events</h1>
@@ -204,8 +204,11 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		<div class="box" id="Students">
 			<h1>Students</h1>
 			<ul>
+				<li class="course">Sanzhar Abdrakhim</a> (URIS student, PolyU)</li>
+				<li class="course">Peiming Chen</a> (PhD candidate, PolyU).</li>
+				<li class="course">Peiming Chen</a> (PhD candidate, PolyU).</li>
 				<li class="course">Chenyu Liu</a> (PhD candidate, PolyU).</li>
-				<li class="course"><a href="#">Lingfeng Zhang</a> (Part-time RA, PolyU).</li>
+				<li class="course"><a href="https://github.com/lcukyfuture">Lingfeng Zhang</a> (PhD candidate, PolyU).</li>
 				<li class="course"><a href="https://henrysenior.com/">Henry Senior</a> (PhD candidate, QMUL).</li>
 				<li class="course"><a href="https://github.com/RicardoL1u">Yantao Liu</a> (BSc student, QMUL/BUPT).</li>
 			</ul>
