--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 			<ul>
 				<li class="course">Sanzhar Abdrakhim (URIS student, PolyU)</li>
 				<li class="course"><a href="https://github.com/PeimingCHEN">Peiming Chen</a> (PhD candidate, PolyU).</li>
-				<li class="course">Chenyu Liu</a> (PhD candidate, PolyU).</li>
+				<li class="course"><a href="https://github.com/theguardsgod/">Chenyu Liu</a> (PhD candidate, PolyU).</li>
 				<li class="course"><a href="https://github.com/lcukyfuture">Lingfeng Zhang</a> (PhD candidate, PolyU).</li>
 				<li class="course"><a href="https://henrysenior.com/">Henry Senior</a> (PhD candidate, QMUL).</li>
 				<li class="course"><a href="https://github.com/RicardoL1u">Yantao Liu</a> (BSc student, QMUL/BUPT).</li>
