--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ I am a full-time <a href="https://www.polyu.edu.hk/eee/people/academic-staff-and
 		<div class="box" id="Students">
 			<h1>Students</h1>
 			<ul>
-				<li class="course">Sanzhar Abdrakhim (URIS student, PolyU)</li>
+				<li class="course"><a href="https://github.com/Spanchsan">Sanzhar Abdrakhim</a> (URIS student, PolyU)</li>
 				<li class="course"><a href="https://github.com/PeimingCHEN">Peiming Chen</a> (PhD candidate, PolyU).</li>
 				<li class="course"><a href="https://github.com/theguardsgod/">Chenyu Liu</a> (PhD candidate, PolyU).</li>
 				<li class="course"><a href="https://github.com/lcukyfuture">Lingfeng Zhang</a> (PhD candidate, PolyU).</li>
